--- a/local.yml
+++ b/local.yml
@@ -3,6 +3,9 @@
   become: true
 
   tasks:
-  - name: install htop
+  - name: install packages
     dnf:
-      name: htop
+      name:
+        - htop
+        - mc
+        - tmux
