--- a/local.yml
+++ b/local.yml
@@ -2,10 +2,11 @@
   connection: local
   become: true
 
+  pre_tasks:
+    - name: update repo
+      dnf:
+        update_cache: yes
+      changed_when: False
+
   tasks:
-  - name: install packages
-    dnf:
-      name:
-        - htop
-        - mc
-        - tmux
+    - include: tasks/packages.yml
