--- a/local.yml
+++ b/local.yml
@@ -4,11 +4,28 @@
 
   pre_tasks:
     - name: update repo
+      tags: always
       dnf:
         update_cache: yes
+        update_only: yes
       changed_when: False
 
   tasks:
     - include: tasks/users.yml
     - include: tasks/cron.yml
     - include: tasks/packages.yml
+    - include: tasks/notepadqq_dependencies.yml
+    - include: tasks/pidgin_dependencies.yml
+    - include: tasks/oh-my-posh.yml
+    - include: tasks/conky.yml
+    - include: tasks/btop.yml
+    - include: tasks/google_chat.yml
+    - include: tasks/samba.yml
+    - include: tasks/fonts.yml
+    - include: tasks/zsh-alias.yml
+    - include: tasks/notepadqq.yml
+    - include: tasks/onedrivegui.yml
+    - include: tasks/theme-config.yml
+    - include: tasks/sshd.yml
+    - include: tasks/mate_config.yml
+    - include: tasks/tilix_config.yml
