--- a/tasks/oh-my-posh.yml
+++ b/tasks/oh-my-posh.yml
@@ -19,5 +19,5 @@
     dest: ~/.poshthemes
     remote_src: yes
     mode: u+rw
-    owner: mhorne
-    group: mhorne
+    owner: "{{ user }}"
+    group: "{{ user }}"
