--- a/local.yml
+++ b/local.yml
@@ -16,16 +16,16 @@
     - include: tasks/packages.yml
     - include: tasks/notepadqq_dependencies.yml
     - include: tasks/pidgin_dependencies.yml
-    - include: tasks/oh-my-posh.yml
-    - include: tasks/conky.yml
-    - include: tasks/btop.yml
-    - include: tasks/google_chat.yml
-    - include: tasks/samba.yml
-    - include: tasks/fonts.yml
-    - include: tasks/zsh-alias.yml
-    - include: tasks/notepadqq.yml
-    - include: tasks/onedrivegui.yml
-    - include: tasks/theme-config.yml
-    - include: tasks/sshd.yml
-    - include: tasks/mate_config.yml
-    - include: tasks/tilix_config.yml
+#    - include: tasks/oh-my-posh.yml
+#    - include: tasks/conky.yml
+#    - include: tasks/btop.yml
+#    - include: tasks/google_chat.yml
+#    - include: tasks/samba.yml
+#    - include: tasks/fonts.yml
+#    - include: tasks/zsh-alias.yml
+#    - include: tasks/notepadqq.yml
+#    - include: tasks/onedrivegui.yml
+#    - include: tasks/theme-config.yml
+#    - include: tasks/sshd.yml
+#    - include: tasks/mate_config.yml
+#    - include: tasks/tilix_config.yml
