--- a/tasks/oh-my-posh.yml
+++ b/tasks/oh-my-posh.yml
@@ -1,4 +1,5 @@
 - name: install oh-my-posh
+  become: true
   tags: oh-my-posh,git
   git:
     repo: https://github.com/JanDeDobbeleer/oh-my-posh/releases/latest/download/posh-linux-amd64
@@ -7,6 +8,7 @@
     update: yes
 
 - name: set oh-my-posh to executable
+  become: true
   tags: oh-my-posh
   ansible.builtin.file:
     path: /usr/local/bin/oh-my-posh
