--- a/local.yml
+++ b/local.yml
@@ -11,6 +11,7 @@
       changed_when: False
 
   tasks:
+  become: true
     - include: tasks/users.yml
     - include: tasks/cron.yml
     - include: tasks/packages.yml
