--- a/local.yml
+++ b/local.yml
@@ -17,7 +17,7 @@
     - include: tasks/notepadqq_dependencies.yml
     - include: tasks/pidgin_dependencies.yml
 #    - include: tasks/oh-my-posh.yml
-    - include: tasks/conky.yml
+    - include_tasks: tasks/conky.yml
 #    - include: tasks/btop.yml
 #    - include: tasks/google_chat.yml
 #    - include: tasks/samba.yml
