--- a/local.yml
+++ b/local.yml
@@ -11,21 +11,21 @@
       changed_when: False
 
   tasks:
-    - include: tasks/users.yml
-    - include: tasks/cron.yml
-    - include: tasks/packages.yml
-    - include: tasks/notepadqq_dependencies.yml
-    - include: tasks/pidgin_dependencies.yml
-#    - include: tasks/oh-my-posh.yml
-    - include_tasks: tasks/conky.yml
-#    - include: tasks/btop.yml
-#    - include: tasks/google_chat.yml
-#    - include: tasks/samba.yml
-#    - include: tasks/fonts.yml
-#    - include: tasks/zsh-alias.yml
-#    - include: tasks/notepadqq.yml
-#    - include: tasks/onedrivegui.yml
-#    - include: tasks/theme-config.yml
-#    - include: tasks/sshd.yml
-#    - include: tasks/mate_config.yml
-#    - include: tasks/tilix_config.yml
+    - include_tasks: tasks/users.yml
+    - include_tasks: tasks/cron.yml
+    - include_tasks: tasks/packages.yml
+    - include_tasks: tasks/notepadqq_dependencies.yml
+    - include_tasks: tasks/pidgin_dependencies.yml
+#    - include_tasks: tasks/oh-my-posh.yml
+#    - include_tasks: tasks/conky.yml
+#    - include_tasks: tasks/btop.yml
+#    - include_tasks: tasks/google_chat.yml
+#    - include_tasks: tasks/samba.yml
+    - include_tasks: tasks/fonts.yml
+#    - include_tasks: tasks/zsh-alias.yml
+#    - include_tasks: tasks/notepadqq.yml
+#    - include_tasks: tasks/onedrivegui.yml
+#    - include_tasks: tasks/theme-config.yml
+#    - include_tasks: tasks/sshd.yml
+#    - include_tasks: tasks/mate_config.yml
+#    - include_tasks: tasks/tilix_config.yml
