--- a/tasks/fonts.yml
+++ b/tasks/fonts.yml
@@ -2,10 +2,10 @@
   tags: font,fonts
   unarchive:
     src: files/fonts.tar.gz
-    creates: ~/.local/share/fonts
-    dest: ~/.local/share/fonts
-    owner: mhorne
-    group: mhorne
+    creates: /home/{{ user }}/.local/share/fonts
+    dest: /home/{{ user }}/.local/share/fonts
+    owner: "{{ user }}"
+    group: "{{ user }}"
 
 - name: reload font cache
   tags: font
