--- a/tasks/tilix_config.yml
+++ b/tasks/tilix_config.yml
@@ -1,39 +1,47 @@
 - name: sidebar on right
   become_user: "{{ user }}"
-  dconf: "com.gexperts.Tilix.Settings sidebar-on-right"
-    key: "true"
+  dconf:
+    key: "com.gexperts.Tilix.Settings sidebar-on-right"
+    value: "true"
 
 - name: set terminal title style
   become_user: "{{ user }}"
-  dconf: "com.gexperts.Tilix.Settings terminal-title-style"
-    key: "'small'"
+  dconf:
+    key: "com.gexperts.Tilix.Settings terminal-title-style"
+    value: "'small'"
 
 - name: set theme
   become_user: "{{ user }}"
-  dconf: "com.gexperts.Tilix.Settings theme-variant"
-    key: "'dark'"
+  dconf:
+    key: "com.gexperts.Tilix.Settings theme-variant"
+    value: "'dark'"
 
 - name: set background transparency
   become_user: "{{ user }}"
-  dconf: "com.gexperts.Tilix.Profile:/com/gexperts/Tilix/profiles/2b7c4080-0ddd-46c5-8f23-563fd3ba789d/ background-transparency-percent"
-    key: 11
+  dconf:
+    key: "com.gexperts.Tilix.Profile:/com/gexperts/Tilix/profiles/2b7c4080-0ddd-46c5-8f23-563fd3ba789d/ background-transparency-percent"
+    value: 11
 
 - name: set font
   become_user: "{{ user }}"
-  dconf: "com.gexperts.Tilix.Profile:/com/gexperts/Tilix/profiles/2b7c4080-0ddd-46c5-8f23-563fd3ba789d/ font"
-    key: "'MesloLGS NF 10'"
+  dconf:
+    key: "com.gexperts.Tilix.Profile:/com/gexperts/Tilix/profiles/2b7c4080-0ddd-46c5-8f23-563fd3ba789d/ font"
+    value: "'MesloLGS NF 10'"
 
 - name: set foreground color
   become_user: "{{ user }}"
-  dconf: "com.gexperts.Tilix.Profile:/com/gexperts/Tilix/profiles/2b7c4080-0ddd-46c5-8f23-563fd3ba789d/ foreground-color"
-    key: "'#FFFFFFFFFFFF'"
+  dconf:
+    key: "com.gexperts.Tilix.Profile:/com/gexperts/Tilix/profiles/2b7c4080-0ddd-46c5-8f23-563fd3ba789d/ foreground-color"
+    value: "'#FFFFFFFFFFFF'"
 
 - name: set use system font
   become_user: "{{ user }}"
-  dconf: "com.gexperts.Tilix.Profile:/com/gexperts/Tilix/profiles/2b7c4080-0ddd-46c5-8f23-563fd3ba789d/ use-system-font"
-    key: "false"
+  dconf:
+    key: "com.gexperts.Tilix.Profile:/com/gexperts/Tilix/profiles/2b7c4080-0ddd-46c5-8f23-563fd3ba789d/ use-system-font"
+    value: "false"
 
 - name: set use theme colors
   become_user: "{{ user }}"
-  dconf: "com.gexperts.Tilix.Profile:/com/gexperts/Tilix/profiles/2b7c4080-0ddd-46c5-8f23-563fd3ba789d/ use-theme-colors"
-    key: "false"
+  dconf:
+    key: "com.gexperts.Tilix.Profile:/com/gexperts/Tilix/profiles/2b7c4080-0ddd-46c5-8f23-563fd3ba789d/ use-theme-colors"
+    value: "false"
