--- a/local.yml
+++ b/local.yml
@@ -13,8 +13,8 @@
 - hosts: localhost
   connection: local
   become: true
-  vars_files:
-    - /vars/variables.yml
+  vars:
+    user: tuser
   tasks:
     - include_tasks: tasks/users.yml
     - include_tasks: tasks/cron.yml
