--- a/tasks/theme-config.yml
+++ b/tasks/theme-config.yml
@@ -1,8 +1,19 @@
+- name: create directories
+  tags: directories,gtk,css,theme,icons,cairo-dock
+  file:
+    path: /home/{{ user }}/.config/gtk-3.0
+    state: directory
+    owner: "{{ user }}"
+    group: "{{ user }}"
+  loop:
+    - /home/{{ user }}/./themes
+    - /home/{{ user }}/.icons
+
 - name: download gtk.css file
   tags: gtk,css
   copy:
     src: files/gtk.css
-    dest: home/{{ user }}/.config/gtk-3.0
+    dest: /home/{{ user }}/.config/gtk-3.0
     owner: "{{ user }}"
     group: "{{ user }}"
 
