--- a/tasks/fonts.yml
+++ b/tasks/fonts.yml
@@ -1,7 +1,7 @@
 - name: create directory
   tags: font,fonts
   file:
-    path: /home/"{{ user }}"/.local/share/fonts
+    path: /home/{{ user }}/.local/share/fonts
     state: directory
     mode: '0755'
 
@@ -9,7 +9,7 @@
   tags: font,fonts
   unarchive:
     src: files/fonts.tar.gz
-    dest: /home/"{{ user }}"/.local/share/fonts
+    dest: /home/{{ user }}/.local/share/fonts
     owner: "{{ user }}"
     group: "{{ user }}"
 
