--- a/tasks/fonts.yml
+++ b/tasks/fonts.yml
@@ -1,10 +1,3 @@
-- name: create directory
-  tags: font,fonts
-  file:
-    path: /home/{{ user }}/.local/share/fonts
-    state: directory
-    mode: '0755'
-
 - name: install fonts
   tags: font,fonts
   unarchive:
@@ -15,4 +8,4 @@
 
 - name: reload font cache
   tags: font
-  shell: fc-cache
+  shell: fc-cache -f -v > /dev/null
