--- a/local.yml
+++ b/local.yml
@@ -22,7 +22,7 @@
     - include_tasks: tasks/notepadqq_dependencies.yml
     - include_tasks: tasks/pidgin_dependencies.yml
     - include_tasks: tasks/directories.yml
-#    - include_tasks: tasks/oh-my-posh.yml
+    - include_tasks: tasks/oh-my-posh.yml
 #    - include_tasks: tasks/conky.yml
 #    - include_tasks: tasks/btop.yml
 #    - include_tasks: tasks/google_chat.yml
