--- a/local.yml
+++ b/local.yml
@@ -28,7 +28,7 @@
 #    - include_tasks: tasks/google_chat.yml
 #    - include_tasks: tasks/samba.yml
     - include_tasks: tasks/fonts.yml
-#    - include_tasks: tasks/zsh-alias.yml
+    - include_tasks: tasks/zsh-alias.yml
 #    - include_tasks: tasks/notepadqq.yml
 #    - include_tasks: tasks/onedrivegui.yml
     - include_tasks: tasks/theme-config.yml
