--- a/tasks/oh-my-posh.yml
+++ b/tasks/oh-my-posh.yml
@@ -1,16 +1,16 @@
 - name: install oh-my-posh
   tags: oh-my-posh,git
-  git:
-    repo: https://github.com/JanDeDobbeleer/oh-my-posh/releases/latest/download/posh-linux-amd64
+  copy:
+    src: https://github.com/JanDeDobbeleer/oh-my-posh/releases/latest/download/posh-linux-amd64
     dest: /usr/local/bin/oh-my-posh
-    clone: yes
-    update: yes
-
-- name: set oh-my-posh to executable
-  tags: oh-my-posh
-  file:
-    path: /usr/local/bin/oh-my-posh
+    remote_src: yes
     mode: +x
+
+#- name: set oh-my-posh to executable
+#  tags: oh-my-posh
+#  file:
+#    path: /usr/local/bin/oh-my-posh
+#    mode: +x
 
 - name: install oh-my-posh themes
   tags: oh-my-posh
