--- a/tasks/directories.yml
+++ b/tasks/directories.yml
@@ -1,12 +1,13 @@
 - name: create directories
   tags: directories,gtk,css,theme,icons,cairo-dock
   file:
-    path: /home/{{ user }}/.config/gtk-3.0
+    path: /home/{{ user }}/{{ item }}
     state: directory
     owner: "{{ user }}"
     group: "{{ user }}"
-  loop:
-    - /home/{{ user }}/.themes
-    - /home/{{ user }}/.icons
-    - /home/{{ user }}/.local/share/fonts
-    - /home/{{ user }}/.poshthemes
+      with_items:
+        - '.config/gtk-3.0'
+        - '.themes'
+        - '.icons'
+        - '.local/share/fonts'
+        - '.poshthemes'
