--- a/tasks/directories.yml
+++ b/tasks/directories.yml
@@ -1,13 +1,14 @@
 - name: create directories
   tags: directories,gtk,css,theme,icons,cairo-dock
   file:
-    path: /home/{{ user }}/{{ item }}
+    path: /home/{{ user }}/{{item}}
     state: directory
     owner: "{{ user }}"
     group: "{{ user }}"
+    mode: 0755
     with_items:
-        - '.config/gtk-3.0'
-        - '.themes'
-        - '.icons'
-        - '.local/share/fonts'
-        - '.poshthemes'
+        - ".config/gtk-3.0"
+        - ".themes"
+        - ".icons"
+        - ".local/share/fonts"
+        - ".poshthemes"
