--- a/tasks/zsh-alias.yml
+++ b/tasks/zsh-alias.yml
@@ -16,9 +16,10 @@
 
 - name: source .zshrc and aliasrc files
   tags: alias,zsh
-  shell: |
-    source aliasrc 2> /dev/null
-    source .zshrc 2> /dev/null
+  command: source {{ item }} > /dev/null
+  with_items:
+    - aliasrc
+    - .zshrc
 
 - name: change shell
   tags: zsh,shell
