--- a/local.yml
+++ b/local.yml
@@ -31,8 +31,8 @@
 #    - include_tasks: tasks/zsh-alias.yml
 #    - include_tasks: tasks/notepadqq.yml
 #    - include_tasks: tasks/rainlendar.yml
-    - include_tasks: tasks/onedrivegui.yml
-#    - include_tasks: tasks/autostart.yml
+#    - include_tasks: tasks/onedrivegui.yml
+    - include_tasks: tasks/autostart.yml
 #    - include_tasks: tasks/theme-config.yml
 #    - include_tasks: tasks/sshd.yml
 #    - include_tasks: tasks/mate_config.yml
