updated script samba

--- a/local.yml
+++ b/local.yml
@@ -26,7 +26,7 @@
 #    - include_tasks: tasks/conky.yml
 #    - include_tasks: tasks/btop.yml
 #    - include_tasks: tasks/google_chat.yml
-#    - include_tasks: tasks/samba.yml
+    - include_tasks: tasks/samba.yml
 #    - include_tasks: tasks/fonts.yml
 #    - include_tasks: tasks/zsh-alias.yml
 #    - include_tasks: tasks/notepadqq.yml
