updated script samba

--- a/tasks/samba.yml
+++ b/tasks/samba.yml
@@ -34,12 +34,12 @@
 - name: semanage command
   tags: samba
   command:
-    cmd: semanage fcontext --add --type "samba_share_t" "/home/{{ user }}/Downloads(/.*)?"
+    cmd: semanage fcontext --add --type "samba_share_t" "/home/{{ user }}/Downloads(/.*)?" 2> /dev/null
 
 - name: restorecon command
   tags: samba
   command:
-    cmd: restorecon -R /home/{{ user }}/Downloads
+    cmd: restorecon -R /home/{{ user }}/Downloads 2> /dev/null
 
 - name: enable smb
   tags: samba
