updated script samba

--- a/tasks/samba.yml
+++ b/tasks/samba.yml
@@ -33,13 +33,15 @@
 
 - name: semanage command
   tags: samba
-  command:
-    cmd: 'semanage fcontext --add --type "samba_share_t" "/home/{{ user }}/Downloads(/.*)?" 2> /dev/null'
+#  command:
+#    cmd: 'semanage fcontext --add --type "samba_share_t" "/home/{{ user }}/Downloads(/.*)?" 2> /dev/null'
+  shell: semanage fcontext --add --type "samba_share_t" "/home/{{ user }}/Downloads(/.*)?" 2> /dev/null
 
 - name: restorecon command
   tags: samba
-  command:
-    cmd: 'restorecon -R /home/{{ user }}/Downloads 2> /dev/null'
+#  command:
+#    cmd: 'restorecon -R /home/{{ user }}/Downloads 2> /dev/null'
+  shell: restorecon -R /home/{{ user }}/Downloads 2> /dev/null
 
 - name: enable smb
   tags: samba
