updated script samba

--- a/tasks/samba.yml
+++ b/tasks/samba.yml
@@ -31,17 +31,23 @@
       force directory mode = 0775
       write list = user
 
-- name: semanage command
-  tags: samba
+#- name: semanage command
+#  tags: samba
 #  command:
 #    cmd: 'semanage fcontext --add --type "samba_share_t" "/home/{{ user }}/Downloads(/.*)?" 2> /dev/null'
-  shell: semanage fcontext --add --type "samba_share_t" "/home/{{ user }}/Downloads(/.*)?" > /dev/null
+#  shell: semanage fcontext --add --type "samba_share_t" "/home/{{ user }}/Downloads(/.*)?" 2> /dev/null
+
+- name: semanage
+  sefcontext:
+    target: /home/{{ user }}/Downloads(/.*)?
+    setype: samba_share_t
+    state: present
 
 - name: restorecon command
   tags: samba
 #  command:
 #    cmd: 'restorecon -R /home/{{ user }}/Downloads 2> /dev/null'
-  shell: restorecon -R /home/{{ user }}/Downloads > /dev/null
+  shell: restorecon -R /home/{{ user }}/Downloads
 
 - name: enable smb
   tags: samba
