--- a/tasks/conky.yml
+++ b/tasks/conky.yml
@@ -1,8 +1,6 @@
 - name: back up existing conky config file
   tags: conky
-  move:
-    src: /etc/conky/conky.conf
-    dest: /etc/conky/conky.conf.bak
+  command: mv /etc/conky/conky.conf /etc/conky/conky.conf.bak
 
 - name: download new conky config file
   tags: conky
