--- a/local.yml
+++ b/local.yml
@@ -18,22 +18,22 @@
   tasks:
 #    - include_tasks: tasks/users.yml
 #    - include_tasks: tasks/cron.yml
-#    - include_tasks: tasks/packages.yml
-#    - include_tasks: tasks/notepadqq_dependencies.yml
-#    - include_tasks: tasks/pidgin_dependencies.yml
-#    - include_tasks: tasks/directories.yml
-#    - include_tasks: tasks/oh-my-posh.yml
+    - include_tasks: tasks/packages.yml
+    - include_tasks: tasks/notepadqq_dependencies.yml
+    - include_tasks: tasks/pidgin_dependencies.yml
+    - include_tasks: tasks/directories.yml
+    - include_tasks: tasks/oh-my-posh.yml
     - include_tasks: tasks/conky.yml
-#    - include_tasks: tasks/btop.yml
-#    - include_tasks: tasks/google_chat.yml
-#    - include_tasks: tasks/samba.yml
-#    - include_tasks: tasks/fonts.yml
-#    - include_tasks: tasks/zsh-alias.yml
-#    - include_tasks: tasks/notepadqq.yml
-#    - include_tasks: tasks/rainlendar.yml
-#    - include_tasks: tasks/onedrivegui.yml
-#    - include_tasks: tasks/autostart.yml
-#    - include_tasks: tasks/theme-config.yml
-#    - include_tasks: tasks/sshd.yml
-#    - include_tasks: tasks/mate_config.yml
-#    - include_tasks: tasks/tilix_config.yml
+    - include_tasks: tasks/btop.yml
+    - include_tasks: tasks/google_chat.yml
+    - include_tasks: tasks/samba.yml
+    - include_tasks: tasks/fonts.yml
+    - include_tasks: tasks/zsh-alias.yml
+    - include_tasks: tasks/notepadqq.yml
+    - include_tasks: tasks/rainlendar.yml
+    - include_tasks: tasks/onedrivegui.yml
+    - include_tasks: tasks/autostart.yml
+    - include_tasks: tasks/theme-config.yml
+    - include_tasks: tasks/sshd.yml
+    - include_tasks: tasks/mate_config.yml
+    - include_tasks: tasks/tilix_config.yml
