--- a/local.yml
+++ b/local.yml
@@ -17,8 +17,8 @@
   vars:
     user: tuser
   tasks:
-    - include_tasks: tasks/users.yml
-    - include_tasks: tasks/cron.yml
+#    - include_tasks: tasks/users.yml
+#    - include_tasks: tasks/cron.yml
     - include_tasks: tasks/packages.yml
     - include_tasks: tasks/notepadqq_dependencies.yml
     - include_tasks: tasks/pidgin_dependencies.yml
