--- a/local.yml
+++ b/local.yml
@@ -14,8 +14,8 @@
 - hosts: localhost
   connection: local
   become: true
-  vars:
-    user: tuser
+#  vars:
+#    user: tuser
   tasks:
 #    - include_tasks: tasks/users.yml
 #    - include_tasks: tasks/cron.yml
